--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-vue": "^2.2.2",
     "animate.css": "^4.1.1",
     "chart.js": "^4.4.9",
+    "chartjs-plugin-annotation": "^3.1.0",
     "sweetalert2": "^11.22.0",
     "tailwindcss": "^3.0.23",
     "vue": "^3.2.31",
