--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "chart.js": "^4.4.9",
     "chartjs-plugin-annotation": "^3.1.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "sweetalert2": "^11.22.0",
     "tailwindcss": "^3.0.23",
     "vue": "^3.2.31",
